# Robot-Control-and-Design-Final-Project

./: README.md
tools/: pull_dataset.sh
turtlebot_controller/: package.xml  setup.py
turtlebot_controller/config/: params.yaml
turtlebot_controller/launch/: bringup.launch.py
turtlebot_controller/turtlebot_controller/: calibrate_signs.py  cli.py  drive_until_sign.py  forward_right_forward.py  motion_controller.py  odom_tracker.py  sign_follower.py  yolo_detector.py
turtlebot_controller_msgs/: CMakeLists.txt  package.xml
turtlebot_controller_msgs/action/: Drive.action  Rotate.action
yolo_detector/: package.xml  setup.py
yolo_detector/launch/: yolo_detector.launch.py
yolo_detector/yolo_detector/: capture_dataset.py  yolo_detector.py
